23. Mai. 2012 - amo -  switch to JavaFX 2.2
21. Mai. 2012 - amo -  add missing source and target ID when throw exception if component was not found
20. Mai. 2012 - amo -  Add support for FXML components, add FXMLReplace worker due to differences with FXComponents
10. Apr. 2012 - amo -  OnStart annotation on Perspective level implemented... TODO: implement on Teardown in FXWorkbenchHandler !!
10. Apr. 2012 - amo -  OnStart and OnTeardown annotations for Components implemented AFXComponent do not extend IEXtended component anymore (no need to implement onStart/OnTeardown) instead annotate methods 
09. Apr. 2012 - amo -  add annotation handling in workbench for perspectives
08. Apr. 2012 - amo -  AFXPerspective extends from AComponent
08. Apr. 2012 - amo -  AFXComponent extends from ASubComponent
08. Apr. 2012 - amo -  AComponent and ASubComponent extracted
08. Apr. 2012 - amo -  Worker classes moved to worker package
06. Apr. 2012 - amo -  fixed todo; find responsible component when no correct target found, try to scan all perspectives for correct rootPerspective,; this can be nessesary when subcomponent moves to an other perspective and a second component sends messages to this component
04. Apr. 2012 - amo -  fixed bug with reassignment of components in perspective when switching between perspectives
02. Apr. 2012 - amo -  updated to version number 1.05
02. Apr. 2012 - amo -  renamed all *.javafx2.* packages to *.javafx.*
01. Apr. 2012 - amo -  AFXComponent, AStatefulCallbackComponent and AStatelessCompnent extending AFXSubComponent
01. Apr. 2012 - amo -  AFXSubComponent added, the basic abstract component
01. Apr. 2012 - amo -  AStateLessCallbackComponent renamed to AStatelessCallbackComponent
01. Apr. 2012 - amo -  AFX2Component renamed to AFXComponent
01. Apr. 2012 - amo -  AFXSubcomponent added, ACallbackComponent renamed to AStatefulCallbackComponent
13. Mar. 2012 - amo -  reduce insance count in stateless components to avoid system overload