@@ -56,9 +56,10 @@ public class FXUtil {
 	public static final String ACOMPONENT_BLOCKED = "blocked";
 	public static final String ACOMPONENT_STARTED = "started";
 	public static final String APERSPECTIVE_MQUEUE = "messageQueue";
-	public static final String ADECLARATIVECOMPONENT_DOCUMENT = "document";
+	public static final String ADECLARATIVECOMPONENT_VIEW_LOCATION = "viewLocation";
 	public static final String ADECLARATIVECOMPONENT_ROOT = "root";
 	public static final String ADECLARATIVECOMPONENT_DOCUMENT_URL = "documentURL";
+	public static final String AFXPerspective_PERSPECTIVE_LAYOUT = "perspectiveLayout";
 
 	/**
 	 * contains constant values
